*
* 0.2.1
*

- Server startup procedure improved
- Fixed bug in Windows service shutdown code
- Added ICMP ping subagent
- Windows console:
	- Action properties dialog improved


*
* 0.2.0
*

- Windows installer improved
- Fixed build issues on various platforms
- Windows console:
	- Items in Control Panel now sorted alphabetically
	- Data collection editor now shows associated template for DCI
	- Added automatic refresh to last values view
	- Rule in policy editor can be enabled/disabled by double click
	  on leftmost column (rule number)
- Fixed incorrect interface detection on FreeBSD


*
* 0.1.20
*

- Implemented object unbinding from administrator console
- Implemented template removing
- Added "Change IP address" function for node objects
- Added Oracle support (via ODBC driver)
- Added server installation program (Windows only)
- Added server configuration wizard (Windows only)
- SNMP agent connectivity check improved
- Added special handling for CheckPoint SNMP agent
- Added "Don't cache this session" option to Windows console login dialog
- Added new console command "show stats"
- Windows CE Console improved:
	- Added "Last DCI Values" view
	- Added graph view
	- Added collected DCI data view
	- Added full screen mode support
	- Implemented sorting in alarm browser
	- Implemented alarm browser autoupdate
	- Implemented object managed/unmanaged state switching
	- Implementen node wakeup
- Network discovery polling mechanism redesigned
- Fixed bug in "show pollers" console command handler
- Fixed occasional appearance of invalid objects at the root of object tree
- Fixed issue #14 (Error handling multiline SMTP responces)


*
* 0.1.19
*

- Data collection templates fully functional
- Added possibility to use server name instead of IP address in
  agent configuration
- Added diff() method for DCI thresholds
- Added possibility to set server config file via environment variable
  NETXMSD_CONFIG on UNIX or registry key HKLM\Software\NetXMS\Server\ConfigFile